MudPaper horizzontaly centered

--- a/App/Learnova/Components/Pages/Login/Form.razor
+++ b/App/Learnova/Components/Pages/Login/Form.razor
@@ -1,6 +1,15 @@
-<MudPaper Class="cursor-copy z-3 absolute d-flex align-content-center" Elevation="3">
-    <MudText Typo="Typo.h1" Class="bg-warning">Ciao</MudText>
-</MudPaper>
+<MudContainer Class="d-flex justify-center vw-100 vh-100">
+    <MudPaper Class="vh-100 pa-3  cursor-copy z-3 " Elevation="3">
+        <MudContainer Class="d-flex gap-2 flex-row">
+            <MudPaper Class="pa-4" Elevation="1">
+                <MudText Class="align-self-center" Typo="Typo.h4">Learnova</MudText>
+            </MudPaper>
+            <MudText Typo="Typo.h4" Class="bg-warning">Ciao</MudText>
+        </MudContainer>
+
+    </MudPaper>
+</MudContainer>
+
     
 
 @code {
