--- a/App/Learnova/Components/Pages/Login/Background.razor.css
+++ b/App/Learnova/Components/Pages/Login/Background.razor.css
@@ -12,10 +12,10 @@ body{
 
 .box {
     position: fixed;
-    top: 0;
-    transform: rotate(80deg);
-    left: 0;
-    z-index: -20;
+    top: 40px;
+    transform: rotate(-20deg);
+    left: 60px;
+    z-index: -1;
 }
 
 .wave {
@@ -33,18 +33,18 @@ body{
     margin-top: -250px;
     transform-origin: 50% 48%;
     border-radius: 43%;
-    animation: drift 7000ms infinite linear;
+    animation: drift 70000ms infinite linear;
     z-index: -50 !important;
 }
 
 .wave.-three {
-    animation: drift 7500ms infinite linear;
+    animation: drift 75000ms infinite linear;
     position: fixed;
     background-color: #77daff;
 }
 
 .wave.-two {
-    animation: drift 3000ms infinite linear;
+    animation: drift 50000ms infinite linear;
     opacity: .1;
     background: black;
     position: fixed;
@@ -57,12 +57,12 @@ body{
     top: 0;
     width: 100%;
     height: 100%;
-    z-index: -11;
+    z-index: 0;
     transform: translate3d(0, 0, 0);
 }
 
 @keyframes drift {
-    from { transform: rotate(0deg); }
+    from { transform: rotate(95deg); }
     from { transform: rotate(360deg); }
 }
 
