Login page set up, made custom theme but darkmode doesn't work

--- a/App/Learnova/Components/Layout/MainLayout.razor
+++ b/App/Learnova/Components/Layout/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<MudThemeProvider Theme="@_theme" IsDarkMode="_isDarkMode" />
+<LearnovaDefaultTheme @ref=theme ></LearnovaDefaultTheme>
 <MudPopoverProvider />
 <MudDialogProvider />
 <MudSnackbarProvider />
@@ -13,7 +13,7 @@
     <MudDrawer id="nav-drawer" Variant="@DrawerVariant.Mini" OpenMiniOnHover="true" @bind-Open="_drawerOpen" ClipMode="DrawerClipMode.Always" Elevation="2">
         <NavMenu/>
     </MudDrawer>
-    <MudMainContent Class="pt-16 pa-4">
+    <MudMainContent>
         @Body
     </MudMainContent>
 </MudLayout>
@@ -27,20 +27,8 @@
 
 @code {
     private bool _drawerOpen = false;
-    private bool _isDarkMode = true;
-    private MudTheme? _theme = null;
+    private LearnovaDefaultTheme theme= new LearnovaDefaultTheme();
 
-    protected override void OnInitialized()
-    {
-        base.OnInitialized();
-
-        _theme = new()
-        {
-            PaletteLight = _lightPalette,
-            PaletteDark = _darkPalette,
-            LayoutProperties = new LayoutProperties()
-        };
-    }
 
     private void DrawerToggle()
     {
@@ -49,52 +37,12 @@
 
     private void DarkModeToggle()
     {
-        _isDarkMode = !_isDarkMode;
+        theme.ToggleDarkMode();
     }
 
-    private readonly PaletteLight _lightPalette = new()
+    public string DarkLightModeButtonIcon => theme.isDarkMode() switch
     {
-        Black = "#110e2d",
-        AppbarText = "#424242",
-        AppbarBackground = "rgba(255,255,255,0.8)",
-        DrawerBackground = "#ffffff",
-        GrayLight = "#e8e8e8",
-        GrayLighter = "#f9f9f9",
-    };
-
-    
-    private readonly PaletteDark _darkPalette = new()
-    {
-        Primary = "#03A9F4",
-        Surface = "#1e1e2d",
-        Background = "#37474F",
-        BackgroundGray = "#757575",
-        AppbarText = "#F5F5F5",
-        AppbarBackground = "#01579B",
-        DrawerBackground = "#80D8FF",
-        ActionDefault = "#74718e",
-        ActionDisabled = "#9999994d",
-        ActionDisabledBackground = "#605f6d4d",
-        TextPrimary = "#b2b0bf",
-        TextSecondary = "#92929f",
-        TextDisabled = "#ffffff33",
-        DrawerIcon = "#92929f",
-        DrawerText = "#92929f",
-        GrayLight = "#2a2833",
-        GrayLighter = "#1e1e2d",
-        Info = "#4a86ff",
-        Success = "#3dcb6c",
-        Warning = "#ffb545",
-        Error = "#ff3f5f",
-        LinesDefault = "#33323e",
-        TableLines = "#33323e",
-        Divider = "#292838",
-        OverlayLight = "#1e1e2d80",
-    };
-
-    public string DarkLightModeButtonIcon => _isDarkMode switch
-    {
-        true => Icons.Material.Rounded.AutoMode,
+        true => Icons.Material.Rounded.LightMode,
         false => Icons.Material.Outlined.DarkMode,
     };
 }
