--- a/App/Learnova/Components/Pages/Login/Form.razor
+++ b/App/Learnova/Components/Pages/Login/Form.razor
@@ -1,11 +1,13 @@
 
-<MudContainer Class="d-flex  justify-center vw-100 vh-100">
-    <MudPaper Class="vh-100 pa-3 z-3  object-bottom" Elevation="3">
-        <MudContainer Class="d-flex  gap-2 flex-row">
-            <MudPaper Class="pa-4 align-self-start" Elevation="1">
-                <MudText Class="vh-100 " Typo="Typo.h4">Learnova</MudText>
+<MudContainer Class="d-flex align-center justify-center" style="height:100vh;">
+    <MudPaper Class="pa-2 rounded-5"Elevation="6">
+        <MudContainer Class="d-flex gap-2 justify-center" >
+            <MudPaper Class="d-flex align-center pa-4"  Elevation="1">
+                
+                <MudText Color="Color.Primary" Typo="Typo.h4">Learnova</MudText>
+                <MudIcon Icon="@Icons.Material.Filled.School" Color="Color.Primary" Size="Size.Large"></MudIcon>
             </MudPaper>
-            <MudCard>
+            <MudCard >
                 <MudCardHeader >
                     <CardHeaderAvatar>
                         <MudAvatar>
@@ -13,7 +15,7 @@
                         </MudAvatar>
                     </CardHeaderAvatar>
                     <CardHeaderContent>
-                        <MudText>Login Utente</MudText>
+                        <MudText >Login Utente</MudText>
                     </CardHeaderContent>
                 </MudCardHeader>
                 <MudCardContent>
@@ -21,7 +23,7 @@
                     <MudTextField T="string" Label="Password" InputType="InputType.Password"></MudTextField>
                 </MudCardContent>
                 <MudCardActions>
-                    <MudButton Color="Color.Primary" ButtonType="ButtonType.Submit">Login</MudButton>
+                    <MudButton FullWidth=true Variant="Variant.Outlined" EndIcon="@Icons.Material.Rounded.Login" Color="Color.Secondary" Class="btn-check" ButtonType="ButtonType.Submit">Login</MudButton>
                 </MudCardActions>
             </MudCard>
             
