added theme to login page and added resources

--- a/App/Learnova/Components/App.razor
+++ b/App/Learnova/Components/App.razor
@@ -11,7 +11,7 @@
     <link href="@Assets["MudBlazor.min.css"]"/>
     <link rel="stylesheet" href="@Assets["Learnova.styles.css"]"/>
     <ImportMap/>
-    <link rel="icon" type="image/png" href="favicon.png"/>
+    <link rel="icon" type="image/png" href="favicon.ico"/>
     
     <HeadOutlet/>
 </head>
