--- a/App/Learnova/Components/Layout/MainLayout.razor
+++ b/App/Learnova/Components/Layout/MainLayout.razor
@@ -6,7 +6,7 @@
 <MudSnackbarProvider />
 <MudLayout>
     <MudAppBar Elevation="1">
-        <MudText Typo="Typo.h5" Class="ml-0">Learnova</MudText>
+        <MudImage Src="favicon.ico" Height="40" Width="40" ObjectFit="ObjectFit.ScaleDown"></MudImage>
         <MudSpacer/>
         <MudIconButton Icon="@(DarkLightModeButtonIcon)" Color="Color.Inherit" OnClick="@DarkModeToggle"/>
     </MudAppBar>
