--- a/App/Learnova/Components/Layout/EmptyLayout.razor
+++ b/App/Learnova/Components/Layout/EmptyLayout.razor
@@ -1,6 +1,6 @@
 @inherits LayoutComponentBase
 
-<MudThemeProvider />
+<LearnovaDefaultTheme></LearnovaDefaultTheme>
 <MudPopoverProvider />
 <MudDialogProvider />
 <MudSnackbarProvider />
