--- a/App/Learnova/Components/Pages/Login/Background.razor.css
+++ b/App/Learnova/Components/Pages/Login/Background.razor.css
@@ -15,7 +15,7 @@ body{
     top: 40px;
     transform: rotate(-20deg);
     left: 60px;
-    z-index: -1;
+    z-index: -11 !important;
 }
 
 .wave {
@@ -57,7 +57,7 @@ body{
     top: 0;
     width: 100%;
     height: 100%;
-    z-index: 0;
+    z-index: -10;
     transform: translate3d(0, 0, 0);
 }
 
@@ -70,7 +70,7 @@ body{
 
 .contain {
     animation-delay: 4s;
-    z-index: -1000;
+    z-index: -100;
     position: fixed;
     top: 0;
     left: 0;
