--- a/App/Learnova/Components/Pages/Login/Form.razor
+++ b/App/Learnova/Components/Pages/Login/Form.razor
@@ -3,9 +3,7 @@
     <MudPaper Class="pa-2 rounded-5"Elevation="6">
         <MudContainer Class="d-flex gap-2 justify-center" >
             <MudPaper Class="d-flex align-center pa-4"  Elevation="1">
-                
-                <MudText Color="Color.Primary" Typo="Typo.h4">Learnova</MudText>
-                <MudIcon Icon="@Icons.Material.Filled.School" Color="Color.Primary" Size="Size.Large"></MudIcon>
+                <MudImage ObjectFit="ObjectFit.Contain" Width="200" Height="200" Fluid="true" Src="favicon.ico" ></MudImage>
             </MudPaper>
             <MudCard >
                 <MudCardHeader >
@@ -23,7 +21,7 @@
                     <MudTextField T="string" Label="Password" InputType="InputType.Password"></MudTextField>
                 </MudCardContent>
                 <MudCardActions>
-                    <MudButton FullWidth=true Variant="Variant.Outlined" EndIcon="@Icons.Material.Rounded.Login" Color="Color.Secondary" Class="btn-check" ButtonType="ButtonType.Submit">Login</MudButton>
+                    <MudButton FullWidth=true Href="/Dashboard" Variant="Variant.Outlined" EndIcon="@Icons.Material.Rounded.Login" Color="Color.Secondary" Class="btn-check" ButtonType="ButtonType.Submit">Login</MudButton>
                 </MudCardActions>
             </MudCard>
             
