--- a/App/Learnova/Components/App.razor
+++ b/App/Learnova/Components/App.razor
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-<Routes/>
+<Routes @rendermode="InteractiveServer"></Routes>
 <script src="_framework/blazor.web.js"></script>
 <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 
