--- a/App/Learnova/Components/Layout/MainLayout.razor
+++ b/App/Learnova/Components/Layout/MainLayout.razor
@@ -8,13 +8,14 @@
     <MudAppBar Elevation="1">
         <MudImage Src="favicon.ico" Height="40" Width="40" ObjectFit="ObjectFit.ScaleDown"></MudImage>
         <MudSpacer/>
-        <MudIconButton Icon="@(DarkLightModeButtonIcon)" Color="Color.Inherit" OnClick="@DarkModeToggle"/>
+        <MudIconButton OnClick="@theme.ToggleDarkMode" Icon="@(DarkLightModeButtonIcon)" Color="Color.Inherit"/>
     </MudAppBar>
     <MudDrawer id="nav-drawer" Variant="@DrawerVariant.Mini" OpenMiniOnHover="true" @bind-Open="_drawerOpen" ClipMode="DrawerClipMode.Always" Elevation="2">
         <NavMenu/>
     </MudDrawer>
     <MudMainContent>
         @Body
+        <MudText></MudText>
     </MudMainContent>
 </MudLayout>
 
@@ -25,7 +26,7 @@
     <span class="dismiss">🗙</span>
 </div>
 
-@code {
+@code{ 
     private bool _drawerOpen = false;
     private LearnovaDefaultTheme theme= new LearnovaDefaultTheme();
 
@@ -35,10 +36,7 @@
         _drawerOpen = !_drawerOpen;
     }
 
-    private void DarkModeToggle()
-    {
-        theme.ToggleDarkMode();
-    }
+    
 
     public string DarkLightModeButtonIcon => theme.isDarkMode() switch
     {
