modified dark theme colors

--- a/App/Learnova/Components/Layout/LearnovaDefaultTheme.razor
+++ b/App/Learnova/Components/Layout/LearnovaDefaultTheme.razor
@@ -26,20 +26,25 @@
 			{
 				Primary = Colors.LightBlue.Default,
 				Secondary = Colors.Amber.Default,
-				Tertiary = Colors.LightBlue.Lighten3,
+				Tertiary = Colors.LightBlue.Darken1,
 				Background = Colors.Gray.Lighten5,
 				AppbarBackground=Colors.LightBlue.Default
 
 			},
 			PaletteDark = new PaletteDark()
 			{
-				Primary = Colors.Gray.Lighten3,
-				Secondary = Colors.LightBlue.Accent1,
-				Tertiary = Colors.Gray.Lighten1,
-				Background = Colors.Gray.Lighten2,
+				Primary = Colors.LightBlue.Lighten1,
+				Secondary = Colors.LightBlue.Default,
+				Tertiary = Colors.LightBlue.Darken2,
+				Surface = Colors.Gray.Lighten3,
+				Background = Colors.Gray.Lighten5,
 				TextPrimary = Colors.Shades.Black,
+				TextSecondary = Colors.Shades.White,
 				AppbarBackground=Colors.LightBlue.Darken4,
-				DrawerBackground = Colors.LightBlue.Darken4
+				DrawerBackground = Colors.LightBlue.Darken4,
+				Divider = Colors.Shades.Black,
+				
+				
 			}
 
 
