Fixed dark mode

--- a/App/Learnova/Components/Layout/LearnovaDefaultTheme.razor
+++ b/App/Learnova/Components/Layout/LearnovaDefaultTheme.razor
@@ -36,12 +36,12 @@
 				Primary = Colors.LightBlue.Lighten1,
 				Secondary = Colors.LightBlue.Default,
 				Tertiary = Colors.LightBlue.Darken2,
-				Surface = Colors.Gray.Lighten3,
-				Background = Colors.Gray.Lighten5,
-				TextPrimary = Colors.Shades.Black,
+				Surface = Colors.BlueGray.Darken2,
+				Background = Colors.BlueGray.Darken3,
+				TextPrimary = Colors.LightBlue.Lighten5,
 				TextSecondary = Colors.Shades.White,
 				AppbarBackground=Colors.LightBlue.Darken4,
-				DrawerBackground = Colors.LightBlue.Darken4,
+				DrawerBackground = Colors.BlueGray.Darken2,
 				Divider = Colors.Shades.Black,
 				
 				
