Added subjects page. Big wip. Kinda ugly

--- a/App/Learnova/Components/Layout/LearnovaDefaultTheme.razor
+++ b/App/Learnova/Components/Layout/LearnovaDefaultTheme.razor
@@ -34,7 +34,7 @@
 			PaletteDark = new PaletteDark()
 			{
 				Primary = Colors.LightBlue.Lighten1,
-				Secondary = Colors.LightBlue.Default,
+				Secondary = Colors.Amber.Lighten1,
 				Tertiary = Colors.LightBlue.Darken2,
 				Surface = Colors.BlueGray.Darken2,
 				Background = Colors.BlueGray.Darken3,
