--- a/App/Learnova/Components/Pages/Calendar/AddEventDialog.razor
+++ b/App/Learnova/Components/Pages/Calendar/AddEventDialog.razor
@@ -21,7 +21,7 @@
     </DialogContent>
     <DialogActions>
         <MudButton OnClick="Cancel">Annulla</MudButton>
-        <MudButton OnClick="AddEvent" Variant="Variant.Filled" Color="Color.Success">Aggiungi Evento</MudButton>
+        <MudButton OnClick="AddEvent" Variant="Variant.Filled" Color="Color.Secondary">Aggiungi Evento</MudButton>
     </DialogActions>
 </MudDialog>
 @code {
