--- a/App/Learnova/Components/Layout/NavMenu.razor
+++ b/App/Learnova/Components/Layout/NavMenu.razor
@@ -1,6 +1,7 @@
 ﻿
 <MudNavMenu>
     <MudNavLink Href="/Dashboard"  Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Dashboard">Dashboard</MudNavLink>
-    <MudNavLink Href="/Calendar" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.CalendarToday">Calendario</MudNavLink></MudNavMenu>
+    <MudNavLink Href="/Calendar" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.CalendarToday">Calendario</MudNavLink>
+    <MudNavLink Href="/Subjects" Icon="@Icons.Material.Filled.School" Match="NavLinkMatch.All">Materie</MudNavLink></MudNavMenu>
 
 
