modified subject color

--- a/App/Learnova/Components/Pages/Subjects/Subjects.razor
+++ b/App/Learnova/Components/Pages/Subjects/Subjects.razor
@@ -13,7 +13,7 @@
                 <TitleContent>
                     <MudContainer Class="d-flex">
                         
-                        <MudAvatar Elevation="2" Variant="Variant.Text" Class="d-flex" Color="Color.Primary">@s[0]</MudAvatar>
+                        <MudAvatar Elevation="2"  Class="d-flex" Color="Color.Primary">@s[0]</MudAvatar>
                         <MudContainer  Class="p-5">
                             <MudText Class="p-5">@s</MudText>
                         </MudContainer>
