--- a/App/Learnova/Components/App.razor
+++ b/App/Learnova/Components/App.razor
@@ -9,7 +9,7 @@
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     @*<link rel="stylesheet" href="@Assets["lib/bootstrap/dist/css/bootstrap.min.css"]"/>*@
     <link href="@Assets["MudBlazor.min.css"]"/>
-    <link rel="stylesheet" href="@Assets["Learnova.styles.css"]"/>
+    @*<link rel="stylesheet" href="@Assets["Learnova.styles.css"]"/>*@
     <ImportMap/>
     <link rel="icon" type="image/png" href="favicon.ico"/>
     
