--- a/App/Learnova/Components/Pages/Subjects/Subjects.razor
+++ b/App/Learnova/Components/Pages/Subjects/Subjects.razor
@@ -1,5 +1,6 @@
 @page "/Subjects"
 @using Learnova.Commons
+@using MudBlazor.Utilities
 @inject IDialogService DialogService
 <MudText Typo="Typo.h3" Class="mb-4">Overview Materie</MudText>
 <MudContainer  MaxWidth="MaxWidth.Large" Class="m-4 d-flex">
@@ -7,7 +8,12 @@
         <MudText Align="Align.Center" Inline="true" Typo="Typo.h5">
             <strong>MEDIA GENERALE</strong> 
         </MudText>
-        <MudAvatar Class="mx-6 my-8" Style="height: 25dvh;width: 25dvh; font-size: xxx-large" Color="Color.Success">@(overallAverage.Value.ToString("N2"))</MudAvatar>
+        <MudChart   ChartType="ChartType.Donut" InputData="@(new[] {  10 - @overallAverage.Value, overallAverage.Value })">
+            <CustomGraphics>
+                <text class="donut-inner-text" x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" fill="black" font-family="Helvetica" font-size="50">@(overallAverage.Value.ToString("N2"))</text>
+            </CustomGraphics>
+        </MudChart>
+        
         
     </MudPaper>
     
@@ -60,34 +66,28 @@
             }
         </MudExpansionPanels>
     </MudContainer>
-    @*<MudTable Items="subjectsList" Bordered="true">
-        <HeaderContent>
-            <MudTh>Materia</MudTh>
-            <MudTh>Media Voti</MudTh>
-        </HeaderContent>
-        <RowTemplate>
-            <MudTd>@context.Name</MudTd>
-            <MudTd>@context.Average.ToString("0.00")</MudTd>
-        </RowTemplate>
-    </MudTable>*@
 
 </MudContainer>
 
 @code {
+    
+    private ChartOptions options = new ChartOptions();
     private Dictionary<string,List<Grade>> subjectsList = new Dictionary<string, List<Grade>>();
     private double? overallAverage;
-    public bool isAdmin = false;
+    public bool isAdmin = true;
     private string[] subjects = { "Matematica", "Italiano", "Latino", "Informatica","Storia" };
+
 
     
     protected override void OnInitialized()
     {
+        
         int count = 0;
         foreach (string s in subjects)
         {
             count++;
             List<Grade> tmp = new List<Grade>();
-            for (int i = 0; i < 10; i++)
+            for (int i = 0; i < 5; i++)
             {
                 tmp.Add(new Grade()
                 {
@@ -99,6 +99,8 @@
             subjectsList.Add(s,tmp);
         }
 
+        
+        
         CalculateOverall();
     }
 
